Fixed logo layout issues in mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -3396,6 +3396,40 @@ img.u-pull-left {
     vertical-align: bottom;
 }
 
+.amrita-logo {
+    width: 250px;
+    margin-top: 30px;
+    margin-left: calc(100vw - 280px);
+}
+
+@media screen and (max-width: 900px) {
+    .s-header__logo img {
+        width: 150px;
+    }
+
+    .amrita-logo {
+        margin-left: calc(100vw - 250px);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .amrita-logo {
+        width: 200px;
+        margin-left: calc(100vw - 220px);
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .s-header__logo img {
+        width: 120px;
+    }
+
+    .amrita-logo {
+        margin-top: 20px;
+        margin-left: calc(100vw - 180px);
+    }
+}
+
 /* -------------------------------------------------------------------
  * ## menu toggle
  * ------------------------------------------------------------------- */
